added release and master to the checkout command in ci and cd

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Push to master
         run: |
-          git checkout ${GITHUB_REF#refs/heads/}
+          git checkout ${GITHUB_REF#refs/heads/master}
           git rebase origin/master
           git branch master
           git push origin master:master
